--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,7 @@
 <h1>Hello, Ruby!</h1>
+<div class="welcomeWrapper">
+	<h1 class="welcomeMessage">Welcome</h1>
+	<h1 class="welcomeMessage">Bienvenida</h1>
+	<h1 class="welcomeMessage">Bem Vindo</h1>
+
+</div>
