--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,19 @@
 	  <span class="icon-bar"></span>
 	  <span class="icon-bar"></span>
 	</button>
+  <%= link_to "Tiny Tots World Music", {:controller => '/welcome', :action => 'index'}, :class => 'navbar-brand'%>
+      </div>
+      <div id="navbarCollapse" class="navbar-collapse collapse">
+  <ul class="nav navbar-nav">
+    <li><%= link_to "Sign Up",
+      {:controller => '/signup', :action => 'index'} %></li>
+      <li><%= link_to "Contact",
+      {:controller => '/contact', :action => 'index'} %></li>
+  </ul>
       </div>
     </div>
   </nav>
+  
 <body>
 
 <%= yield %>
